<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/urgent_problems"
        android:icon="@drawable/urgent_problems"
        android:title="@string/urgent_problems_submenu"/>
    <item android:id="@+id/make_a_call"
        android:icon="@drawable/make_a_call"
        android:title="@string/make_a_call_submenu"/>
    <item android:id="@+id/web_monitoring"
        android:icon="@drawable/web_monitoring"
        android:title="@string/web_monitoring_submenu"/>
    <item android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about_app_submenu"/>
    <item android:id="@+id/log_out"
        android:icon="@drawable/log_out"
        android:title="@string/log_out_submenu"/>
</menu>