<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/loading"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/title_pic"
        android:layout_marginTop="75dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/aps_new_logo"/>

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/tip"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/access_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:hint="@string/access_login"
        android:textColorHint="@color/hintColor"
        android:gravity="start"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_login"
        android:drawableStart="@drawable/ic_login"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/access_code"
        android:textColorHint="@color/hintColor"
        android:gravity="start"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:autofillHints="password" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

    </LinearLayout>



    <Button
        android:id="@+id/enter"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/login_button"
        android:background="@drawable/button" />

</LinearLayout>