<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    tools:context=".PultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_background">

        <Button
            android:id="@+id/repair_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/remont_button"
            android:paddingLeft="50dp"
            android:text="@string/remoteButtonRed"
            android:textAlignment="center"
            android:textColor="@color/remoteButtonTextColor"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/quality_btn"
            android:layout_weight="5"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/otk_button"
            android:text="@string/remoteButtonYellow"
            android:textAlignment="center"
            android:textColor="@color/remoteButtonTextColor"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:paddingRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/raw_btn"
            android:paddingLeft="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="top"
            android:layout_marginLeft="5dp"
            android:background="@drawable/materials_button"
            android:text="@string/remoteButtonGreen"
            android:textAlignment="center"
            android:textColor="@color/remoteButtonTextColor"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp" />

        <Button
            android:id="@+id/master_btn"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:paddingRight="50dp"
            android:layout_gravity="top"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/master_button"
            android:text="@string/remoteButtonBlue"
            android:textAlignment="center"
            android:textColor="@color/remoteButtonTextColor"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:layout_width="match_parent"
            android:layout_marginEnd="5dp" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/operator_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>