<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="200dp"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/login_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:padding="5dp"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="Детали вызова"
        tools:ignore="NestedWeights" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/who_is_called_position"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/who_is_called_position"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textColor="@color/text"
            android:padding="5dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@drawable/edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/shop"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/shop"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textColor="@color/text"
            android:padding="5dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@drawable/edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/equipmentLine"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/equipment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/edit"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/nomer_point_textview"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/point_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/text"
            android:padding="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@drawable/edit" />

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:drawableStart="@drawable/decline_button"
            android:padding="14dp"
            android:background="@drawable/red_rectangle"
            android:text="@string/cancelButton" />

        <Button
            android:layout_marginLeft="15dp"
            android:id="@+id/confirm"
            android:paddingHorizontal="20dp"
            android:background="@drawable/green_rectangle"
            android:textStyle="bold"
            android:padding="14dp"
            android:drawableStart="@drawable/accept_button"
            android:textColor="@color/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>